--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "dependencies": {
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "gh-pages": "^2.0.1"
+  },
+  "devDependencies": {
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "husky": "^1.1.2",
+    "lint-staged": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +30,15 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "lint-staged": {
+    "linters": {
+      "*.{js,jsx}": [
+        "node_modules/.bin/eslint --fix --color --max-warnings 2 .",
+        "prettier --write",
+        "git add"
+      ]
+    }
+  },
+  "homepage": "https://grafdefer.github.io/inln-entrance-test"
 }
